WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212533
ASSERT NOT REACHED in IPC::takeAsyncReplyHandler under WebKit::AudioSessionRoutingArbitrator::beginRoutingArbitrationWithCategory
https://bugs.webkit.org/show_bug.cgi?id=212533
Summary
ASSERT NOT REACHED in IPC::takeAsyncReplyHandler under WebKit::AudioSessionRo...
Peng Liu
Reported
2020-05-29 11:07:59 PDT
ASSERT NOT REACHED in IPC::takeAsyncReplyHandler under WebKit::AudioSessionRoutingArbitrator::beginRoutingArbitrationWithCategory
Attachments
Patch
(2.17 KB, patch)
2020-05-29 12:29 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-05-29 11:09:10 PDT
<
rdar://problem/63684844
>
Peng Liu
Comment 2
2020-05-29 12:29:32 PDT
Created
attachment 400606
[details]
Patch
Chris Dumez
Comment 3
2020-05-29 12:30:28 PDT
Comment on
attachment 400606
[details]
Patch r=me
EWS
Comment 4
2020-05-29 14:13:27 PDT
Committed
r262317
: <
https://trac.webkit.org/changeset/262317
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400606
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug