ASSERT NOT REACHED in IPC::takeAsyncReplyHandler under WebKit::AudioSessionRoutingArbitrator::beginRoutingArbitrationWithCategory https://bugs.webkit.org/show_bug.cgi?id=212533

Reviewed by Chris Dumez.

When the m_inDispatchMessageMarkedToUseFullySynchronousModeForTesting flag is set,
sendWithAsyncReply() may actually send the message synchronously. Therefore, we have
to set the async reply handler before actually sending the message.

No new tests, fixing test crashes due to assertion failures.

* Platform/IPC/Connection.h:
(IPC::Connection::sendWithAsyncReply):


Canonical link: https://commits.webkit.org/225368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262317 268f45cc-cd09-0410-ab3c-d52691b4dbfc