Source/WebKit/Platform/IPC/Connection.h
@@ -483,15 +483,15 @@ void Connection::sendWithAsyncReply(T&& message, C&& completionHandler, uint64_t
 
     auto encoder = makeUnique<Encoder>(T::name(), destinationID);
     uint64_t listenerID = nextAsyncReplyHandlerID();
-    encoder->encode(listenerID);
-    encoder->encode(message.arguments());
-    sendMessage(WTFMove(encoder), sendOptions);
     addAsyncReplyHandler(*this, listenerID, [completionHandler = WTFMove(completionHandler)] (Decoder* decoder) mutable {
         if (decoder && decoder->isValid())
             T::callReply(*decoder, WTFMove(completionHandler));
         else
             T::cancelReply(WTFMove(completionHandler));
     });
+    encoder->encode(listenerID);
+    encoder->encode(message.arguments());
+    sendMessage(WTFMove(encoder), sendOptions);
 }
 
 template<size_t i, typename A, typename B> struct TupleMover {
